more front matter rewrites, fixed social media image paths again because twitter tags are stupid

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <!--[if lte IE 8]><link rel="stylesheet" href="{{ "/css/ie8.css" | prepend: site.baseurl }}" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{ "/css/ie9.css" | prepend: site.baseurl }}" /><![endif]-->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <meta property="og:image" content="//www.paul-franz.com/images/pfranz_social.jpg" />
+  <meta property="og:image" content="https://www.paul-franz.com/images/pfranz_social.jpg" />
   <meta property="og:image:width" content="1500" />
   <meta property="og:image:height" content="754" />
 
@@ -20,7 +20,7 @@
   <meta name="twitter:description" content="Paul Franz is a Washington, D.C.-based multimedia and digital communications expert with experience in video, web development, management, and design." />
   <meta name="twitter:title" content="Paul Franz | Video. Design. Web." />
   <meta name="twitter:site" content="@pkfranz" />
-  <meta name="twitter:image" content="//www.paul-franz.com/images/pfranz_twitter.jpg" />
+  <meta name="twitter:image" content="https://www.paul-franz.com/images/pfranz_twitter.jpg" />
   <meta name="twitter:creator" content="@pkfranz" />
 
   <script>
