apparently i cannot spell résumé correctly

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
             {% endif %}
             {% endfor %}
-            <li><a href="paul_franz_resume.pdf" target="_blank">Resumé</a></li>
+            <li><a href="paul_franz_resume.pdf" target="_blank">Résumé</a></li>
             <li><a href="https://www.linkedin.com/in/pkfranz" target="_blank"><span class="icon fa-linkedin-square"></span></a><a href="mailto:paulkfranz@gmail.com" target="_blank"><span class="icon fa-envelope"></span></a></li>
           </ul>
         </div>
