content updates, resume change, new images

--- a/css/main.scss
+++ b/css/main.scss
@@ -1507,8 +1507,8 @@ $baseurl: '{{ site.baseurl }}/images';
 		text-align: center;
 
 		h2 {
-			@include vendor('transform', 'scale(1)');
-			@include vendor('transition', ('transform 0.5s ease', 'opacity 0.5s ease'));
+			//@include vendor('transform', 'scale(1)');
+			//@include vendor('transition', ('transform 0.5s ease', 'opacity 0.5s ease'));
 			display: inline-block;
 			font-size: 1.75em;
 			opacity: 1;
@@ -1517,8 +1517,8 @@ $baseurl: '{{ site.baseurl }}/images';
 			z-index: 1;
 
 			&:before, &:after {
-				@include vendor('transition', 'width 0.85s ease');
-				@include vendor('transition-delay', '0.25s');
+				 @include vendor('transition', 'width 2s ease');
+				 @include vendor('transition-delay', '0.25s');
 				background: _palette(fg-bold);
 				content: '';
 				display: block;
@@ -1548,9 +1548,9 @@ $baseurl: '{{ site.baseurl }}/images';
 		}
 
 		.more {
-			@include vendor('transition', ('transform 0.75s ease', 'opacity 0.75s ease'));
-			@include vendor('transition-delay', '3.5s');
-			@include vendor('transform', 'translateY(0)');
+			// @include vendor('transition', ('transform 0.75s ease', 'opacity 0.75s ease'));
+			// @include vendor('transition-delay', '3.5s');
+			// @include vendor('transform', 'translateY(0)');
 			border: none;
 			bottom: 0;
 			color: inherit;
@@ -1586,8 +1586,8 @@ $baseurl: '{{ site.baseurl }}/images';
 
 		&:after {
 			@include vendor('pointer-events', 'none');
-			@include vendor('transition', 'opacity #{_duration(fadein)} ease-in-out');
-			@include vendor('transition-delay', '1.25s');
+			// @include vendor('transition', 'opacity #{_duration(fadein)} ease-in-out');
+			// @include vendor('transition-delay', '1.25s');
 			content: '';
 			background: _palette(bg);
 			display: block;
