--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %} | Video. Design. Web.</title>
-  <meta name="description" content="Paul Franz is a Washington, D.C.-based multimedia and digital communications expert with experience in video, web development, management, and design.">
+  <meta name="description" content="Paul Franz is a New York City-based multimedia and digital policy communications expert with experience in video, web development, management, and design.">
   <meta name="author" content="Paul Franz">
   <link rel="icon" href="images/favicon.ico">
   <!--[if lte IE 8]><script src="{{ "/js/ie/html5shiv.js" | prepend: site.baseurl }}"></script><![endif]-->
@@ -17,8 +17,8 @@
   <meta property="og:image:height" content="754" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:description" content="Paul Franz is a Washington, D.C.-based multimedia and digital communications expert with experience in video, web development, management, and design." />
-  <meta name="twitter:title" content="Paul Franz | Video. Design. Web." />
+  <meta name="twitter:description" content="Paul Franz is a New York City-based multimedia and digital policy communications expert with experience in video, web development, management, and design." />
+  <meta name="twitter:title" content="Paul Franz | Maps. Video. Design. Web." />
   <meta name="twitter:site" content="@pkfranz" />
   <meta name="twitter:image" content="https://www.paul-franz.com/images/pfranz_twitter.jpg" />
   <meta name="twitter:creator" content="@pkfranz" />
